--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,10 +1,3 @@
-#search {
-  border: 1px solid #c1c1c1;
-  padding: 5px 10px;
-  border-radius: 20px;
-  background-color: #f2f2f223;
-  font-size: 16px;
-  outline-color: rgba(28, 92, 255, 0.193);
-  padding: 10px 15px;
-  width: 500px;
+nav img:hover {
+  cursor: pointer;
 }
